# footbot-flocking

./: CMakeLists.txt  README.md  package.xml
config/: config.yaml
controller/: flocking.cpp  flocking.hpp
experiments/: flocking.argos
launch/: flocking.launch.py
log/: latest_list
src/: flocking.cpp  flocking.h
