<?xml version="1.0"?>
<package format="3">
  <name>flocking</name>
  <version>0.0.1</version>
  <description>Flocking</description>

  <maintainer email="tianfu.zhang@uni-konstanz.de">Tianfu</maintainer>

  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  
  <depend>rclcpp</depend>
  <depend>argos3_ros2_bridge</depend>

  <build_depend>ament_cmake</build_depend>
  <build_depend>geometry_msgs</build_depend>

  <test_depend>ament_cmake</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
